--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,6 +5,6 @@
     <color name="cat_item_name">#5E2F2F</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="primaryColor">#FF4081</color>
-    <color name="primaryColorLetters">#FF4081</color>
-    <color name="accentColor">#3F51B5</color>
+    <color name="primaryColorLetters">#FFFFFF</color>
+    <color name="accentColor">#F2F3F8</color>
 </resources>
